added size recognition

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ FACTOR_THRES_GEN = 10 # found color val +/- THR_GEN%
 FACTOR_DILATE = 40 # affects how areas are made bigger / connected
 FACTOR_MIN_AREA = 1 # minimum area of a blob (% of image size)
 FACTOR_MAX_AREA = 40 # maximum area of a blob (% of image size)
+REF_SIZE = 5 # diameter of the reference circle in mm
